--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -26,3 +26,22 @@
 % %Penalty for relation and binary operation breaks in equations
 % \relpenalty=9999
 % \binoppenalty=9999
+
+
+\usepackage{xcolor}
+\definecolor{salmon}{rgb}{0.99,0.66,0.52}
+\definecolor{purple}{rgb}{0.647,0.537,0.757}
+\newcommand{\comment}[1]{{\color{purple}#1}}
+\newcommand{\red}[1]{{\color{red}#1}}
+
+
+\newtheorem{theorem}{Theorem}
+\newtheorem{corollary}{Corollary}
+\newtheorem{lemma}{Lemma}
+\newtheorem{proposition}{Proposition}
+\newtheorem{definition}{Definition}
+\newtheorem{assumption}{Assumption}
+
+\newtheorem{proof}{Proof}
+\newtheorem{remark}{Remark}
+
