--- a/head/settings_epfl_template.tex
+++ b/head/settings_epfl_template.tex
@@ -47,7 +47,18 @@
 \usepackage{fourier} % Utopia font-typesetting including mathematical formula compatible with newer TeX-Distributions (>2010)
 %\usepackage{utopia} % on older systems -> use this package instead of fourier in combination with mathdesign for better looking results
 %\usepackage[adobe-utopia]{mathdesign}
-\setlength{\textwidth}{146.8mm} % = 210mm - 37mm - 26.2mm
+
+
+% OLD
+%\setlength{\textwidth}{146.8mm} % = 210mm - 37mm - 26.2mm
+%\setlength{\oddsidemargin}{11.6mm} % 37mm - 1in (from hoffset)
+%\setlength{\evensidemargin}{0.8mm} % = 26.2mm - 1in (from hoffset)
+%\setlength{\topmargin}{-2.2mm} % = 0mm -1in + 23.2mm 
+%\setlength{\textheight}{221.9mm} % = 297mm -29.5mm -31.6mm - 14mm (12 to accomodate footline with pagenumber)
+%\setlength{\headheight}{14pt}
+
+% EMILIO
+\setlength{\textwidth}{135.8mm} % = 210mm - 37mm - 26.2mm
 \setlength{\oddsidemargin}{11.6mm} % 37mm - 1in (from hoffset)
 \setlength{\evensidemargin}{0.8mm} % = 26.2mm - 1in (from hoffset)
 \setlength{\topmargin}{-2.2mm} % = 0mm -1in + 23.2mm 
