--- a/head/dedication.tex
+++ b/head/dedication.tex
@@ -4,11 +4,17 @@
 
 \vspace*{3cm}
 
+%\begin{raggedleft}
+%    	%Imagine it's 20 years in the future--maybe robots have taken over, \\ maybe they haven't; I don't know, this story isn't about that.\\
+%       %--- Mr. Peanutbutter\\
+%    I got into this business because I love stories. They comfort us, \\ they inspire us, they create a context for how we experience the world. \\
+%	--- Princess Carolyn\\
+%\end{raggedleft}
+
 \begin{raggedleft}
-    	%Imagine it's 20 years in the future--maybe robots have taken over, \\ maybe they haven't; I don't know, this story isn't about that.\\
-       %--- Mr. Peanutbutter\\
-    I got into this business because I love stories. They comfort us, \\ they inspire us, they create a context for how we experience the world. \\
-	--- Princess Carolyn\\
+	Besides this'll be easy with the two of us. \\ We've got science on our side. \\
+    %Science rules! Here's some proof. \\ (Looking at the crowd in disbelief) \\
+	--- Bonnibel Bubblegum\\
 \end{raggedleft}
 
 \vspace{4cm}
