--- a/main/chap1_introduction.tex
+++ b/main/chap1_introduction.tex
@@ -1,7 +1,6 @@
 \cleardoublepage
-\chapter*{Introduction}
+\chapter{Introduction}
 \markboth{Introduction}{Introduction}
-\addcontentsline{toc}{chapter}{Introduction}
 A non-numbered chapter\dots
 
 \section{Outline and Contribution}
