--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -18,4 +18,27 @@
 	Owner = {oropeza},
 	Timestamp = {2008.01.11},
 	Title = {{E}arthquake damage evaluation data for {C}alifornia},
-	Year = {1985}}
+	Year = {1985}
+}
+
+@article{temlyakov2008approximation,
+	title={Approximation in learning theory},
+	author={Temlyakov, VN},
+	journal={Constructive Approximation},
+	volume={27},
+	number={1},
+	pages={33--74},
+	year={2008},
+	publisher={Springer}
+}
+
+% unusual kernels
+@article{lodhi2002text,
+	title={Text classification using string kernels},
+	author={Lodhi, Huma and Saunders, Craig and Shawe-Taylor, John and Cristianini, Nello and Watkins, Chris},
+	journal={Journal of machine learning research},
+	volume={2},
+	number={Feb},
+	pages={419--444},
+	year={2002}
+}
