--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -52,14 +52,15 @@
 %%%%% MAIN: The chapters of the thesis
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \mainmatter
-\include{main/ch1_introduction}
-\cleardoublepage
-\part{Body 1}
-\include{main/ch2_figures_tables}
-\cleardoublepage
-\part{Body 2}
-\include{main/ch3_math}
-\include{main/ch4_more_text}
+\include{main/chap1_introduction}
+\include{main/chap2_kernels}
+%\cleardoublepage
+%\part{Body 1}
+%\include{main/ch2_figures_tables}
+%\cleardoublepage
+%\part{Body 2}
+%\include{main/ch3_math}
+%\include{main/ch4_more_text}
 
 % use to end the last part if the thesis is composed of parts
 \addtocontents{toc}{\vspace{\normalbaselineskip}}
