--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -16,6 +16,7 @@
 %%%%% HEAD: Book-Begin
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
+	
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{0pt} %(needs to be before titlepage and frontmatter to keep the table of contents lists short)
 \frontmatter
@@ -54,6 +55,8 @@
 \mainmatter
 \include{main/chap1_introduction}
 \include{main/chap2_kernels}
+\include{main/chap3_gaussian_processes}
+\include{main/chap4_pqp_nn}
 %\cleardoublepage
 %\part{Body 1}
 %\include{main/ch2_figures_tables}
