--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -42,3 +42,11 @@
 	pages={419--444},
 	year={2002}
 }
+
+@book{scholkopf2002learning,
+	title={Learning with kernels: support vector machines, regularization, optimization, and beyond},
+	author={Sch{\"o}lkopf, Bernhard and Smola, Alexander J},
+	year={2002},
+	publisher={MIT press}
+}
+
